# AutoCatLab

./: .gitignore  MANIFEST.in  README.md  config.json  config_bulk+surafce.json  config_bulk.json  config_surface.json  improved_README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  container.py  main.py
src/AutoCatLab/: __init__.py  container.py  container_base.py  main.py
src/AutoCatLab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/AutoCatLab/AutoCatLab.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
src/AutoCatLab/client/: mpi_api.py
src/AutoCatLab/constant/: valence_orbital_mapping_new.yaml  valence_orbital_mapping_new_metal_d_o2p.yaml
src/AutoCatLab/db/: connectors.py  crud.py  models.py
src/AutoCatLab/executor/: batch_executor_manager.py  calculation_executor.py  dft_dos_executor.py  dft_relax_executor.py  icohp_executor.py
src/AutoCatLab/initializer/: batch_processor.py  input_processor.py  job_processor.py  job_script_generator.py
src/AutoCatLab/logger/: __init__.py
src/AutoCatLab/util/: config.json  formal_oxidation_state.py  util.py
src/AutoCatLab/validator/: __init__.py
src/client/: mpi_api.py
src/db/: __init__.py  connectors.py  crud.py
src/executor/: batch_executor_manager.py  calculation_executor.py  dft_dos_executor.py  dft_relax_executor.py  icohp_executor.py
src/executor/util/: rapidos.py  (+1 more)
src/initializer/: batch_processor.py  input_processor.py  job_processor.py  job_script_generator.py
src/util/: util.py
src/workflow/: __init__.py  workflow_manager.py
(+23 files in other folders)
