[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoCatLab"
version = "0.1.0"
description = "Automated Catalyst Laboratory"
requires-python = ">=3.8"
dependencies = [
    "ase>=3.22.0",
    "pymatgen>=2023.12.18",
    "mp-api>=0.43.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.25",
    "mendeleev>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.scripts]
autocatlab = "main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "workflow",
    "initializer",
    "executor",
    "db",
    "util",
    "constant",
    "client",
    "validator",
    "logger"
] 